--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,22 @@
 %head
   %title PinBoard
   = csrf_meta_tags
-  = javascript_include_tag "application"
+  = javascript_include_tag 'application'
+  = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
 %body
+  %nav.navbar.navbar-default
+    .container
+      .navbar-brand= link_to "Pin Board", root_path
 
-  = yield
+      - if user_signed_in?
+        %ul.nav.navbar-nav.navbar-right
+          %li= link_to "New Pin", new_pim_path
+          %li= link_to "Account", edit_user_registration_path
+          %li= link_to "Sign Out", destroy_user_session_path, method: :delete
+      - else user_signed_in?
+        %ul.nav.navbar-nav.navbar-right
+          %li= link_to "Sign Up", new_user_registration_path
+          %li= link_to "Sign In", new_user_session_path
+
+  .container
+    = yield
