--- a/app/views/pims/new.html.haml
+++ b/app/views/pims/new.html.haml
@@ -1,5 +1,8 @@
-%h1 New Pin
 
-=render 'form'
-
-=link_to "Back", root_path
+.col-md-8.col-md-offset-2
+  .row
+    .panel.panel-default
+      .panel-heading
+        %h1 Create A New pim
+      .panel-body
+        = render 'form'
