--- a/app/views/pims/show.html.haml
+++ b/app/views/pims/show.html.haml
@@ -1,10 +1,22 @@
-%h1= @pim.title
-%p= @pim.description
-
-%p
-  Submitted by
-  = @pim.user.email
-%br/
-= link_to "Back", root_path
-= link_to "Edit", edit_pim_path
-= link_to "Delete", pim_path, method: :delete, data: {confirm: "Are you shure?"}
+#pim_show.row
+  .col-md-8.col-md-offset-2
+    .panel.panel-default
+      .panel-heading.pim_image
+        = image_tag @pim.image.url
+      .panel-body
+        %h1= @pim.title
+        %p.description= @pim.description
+      .panel-footer
+        .row
+          .col-md-6
+            %p.user
+              Submitted by
+              = @pim.user.email
+          .col-md-6
+            .btn-group.pull-right
+              = link_to like_pim_path(@pim), method: :put, class: "btn btn-default" do
+                %span.glyphicon.glyphicon-heart
+                = @pim.get_upvotes.size
+              - if user_signed_in?
+                = link_to "Edit", edit_pim_path, class: "btn btn-default"
+                = link_to "Delete", pim_path, method: :delete, class: "btn btn-default"
