--- a/app/views/pims/new.html.haml
+++ b/app/views/pims/new.html.haml
@@ -3,6 +3,6 @@
   .row
     .panel.panel-default
       .panel-heading
-        %h1 Create A New pim
+        %h1 Create A New Post
       .panel-body
         = render 'form'
