--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -84,7 +84,7 @@ nav {
   .pim_image {
     img {
       max-width: 100%;
-      width: 100%;
+      width: 400px;
       display: block;
       margin: 0 auto;
     }
