--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,11 +8,11 @@
 %body
   %nav.navbar.navbar-default
     .container
-      .navbar-brand= link_to "Pin Board", root_path
+      .navbar-brand= link_to "Wall of Posts", root_path
 
       - if user_signed_in?
         %ul.nav.navbar-nav.navbar-right
-          %li= link_to "New Pin", new_pim_path
+          %li= link_to "New Post", new_pim_path
           %li= link_to "Account", edit_user_registration_path
           %li= link_to "Sign Out", destroy_user_session_path, method: :delete
       - else user_signed_in?
