--- a/app/views/pims/edit.html.haml
+++ b/app/views/pims/edit.html.haml
@@ -2,7 +2,7 @@
   .row
     .panel.panel-default
       .panel-heading
-        %h1 Edit Your pim
+        %h1 Edit Your Post
       .panel-body
         .current_image
           %strong.center Current Image
